; ModuleID = '/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_d68040_move16_al_ai.c'
source_filename = "/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_d68040_move16_al_ai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@M68K_AM_ABSOLUTE_DATA_LONG = common dso_local global i32 0, align 4
@M68K_AM_REG_DIRECT_ADDR = common dso_local global i32 0, align 4
@M68040_PLUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @d68040_move16_al_ai to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68040_move16_al_ai(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca [2 x i32], align 4
  %4 = alloca [2 x i32], align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %7 = call i32 @read_imm_32(%struct.TYPE_6__* %6)
  store i32 %7, i32* %5, align 4
  %8 = getelementptr inbounds i32, i32* %5, i64 1
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, 7
  store i32 %12, i32* %8, align 4
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %14 = load i32, i32* @M68K_AM_ABSOLUTE_DATA_LONG, align 4
  store i32 %14, i32* %13, align 4
  %15 = getelementptr inbounds i32, i32* %13, i64 1
  %16 = load i32, i32* @M68K_AM_REG_DIRECT_ADDR, align 4
  store i32 %16, i32* %15, align 4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = load i32, i32* @M68040_PLUS, align 4
  %19 = call i32 @LIMIT_CPU_TYPES(%struct.TYPE_6__* %17, i32 %18)
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %21 = getelementptr inbounds [2 x i32], [2 x i32]* %3, i64 0, i64 0
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %23 = call i32 @build_move16(%struct.TYPE_6__* %20, i32* %21, i32* %22)
  ret void
}

declare dso_local i32 @read_imm_32(%struct.TYPE_6__*) #1

declare dso_local i32 @LIMIT_CPU_TYPES(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @build_move16(%struct.TYPE_6__*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
